test/data/resolver/valid/merge_then_return.cypher
MERGE (a:Person) RETURN a
