test/data/resolver/invalid/merge_endpoint_unknown_label.cypher
MERGE (n:NotDeclared) RETURN n
